# rpgbot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker.sh
migrations/2022-07-30-033332_create_weapons/: down.sql  up.sql
migrations/2022-07-30-033629_create_items/: down.sql  up.sql
res/: apple.lua  coin.lua  faulty_water_gun.lua  shield.lua
src/: battle.rs  commands.rs  lib.rs  main.rs  model.rs  prelude.rs  schema.rs  types.rs  util.rs
src/battle/: log.rs  mod.rs  player.rs  util.rs
src/battle/player/: item.rs  items.rs  mod.rs  util.rs  weapon.rs
src/battle/player/item/: apple.rs  coin.rs  faulty_water_gun.rs  items.rs  mod.rs  shield.rs
src/battle/player/weapon/: hammer.rs  mod.rs  spear.rs  sword.rs
