[package]
name = "rpgbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
diesel = { version = "1.4.8", features = [ "postgres" ] }
dotenv = "0.15.0"
poise = "0.3.0"
rand = "0.8.5"
tokio = { version = "1.20.0", features = [ "rt-multi-thread" ] }
uuid = { version = "1.1.2", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
